--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <ImageView
+        android:id="@+id/pokemon_image"
+        android:elevation="4dp"
+        android:src="@drawable/bewear"
+        android:layout_margin="20dp"
+        android:scaleType="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <GridLayout
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pokemon_image"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+
+        <TextView
+            android:id="@+id/tv_one"
+            android:layout_margin="10dp"
+            android:textSize="30sp"
+            android:text="afsdfasdfadsf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_two"
+            android:layout_margin="10dp"
+            android:textSize="30sp"
+            android:text="afsdfasdfadsf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_three"
+            android:layout_margin="10dp"
+            android:textSize="30sp"
+            android:text="afsdfasdfadsf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_four"
+            android:layout_margin="10dp"
+            android:textSize="30sp"
+            android:text="afsdfasdfadsf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+
+    </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
