--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,21 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+   <TextView
+       android:text="2/7"
+       android:id="@+id/tv_question_track"
+       android:layout_margin="20dp"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       android:textSize="20sp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content" />
+    <TextView
+        android:text="2 : points"
+        android:id="@+id/tv_points"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/pokemon_image"
         android:elevation="4dp"
-        android:src="@drawable/bewear"
+        android:src="@drawable/eevee"
         android:layout_margin="20dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_question_track"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="200dp" />
 
 
     <GridLayout
+        android:visibility="gone"
+        android:id="@+id/questions_container"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pokemon_image"
@@ -62,9 +83,38 @@
             android:text="afsdfasdfadsf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
-
-
     </GridLayout>
+
+    <EditText
+        android:textSize="30sp"
+        android:layout_margin="20dp"
+        android:id="@+id/edit_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pokemon_image"
+        android:hint="@string/hint_pokemon_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/bt_ok"
+        android:layout_margin="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_text"
+        android:text="@string/bt_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:visibility="gone"
+        android:id="@+id/bt_play_again"
+        android:background="@android:color/holo_red_dark"
+        android:textColor="@android:color/white"
+        android:text="@string/play_again_text"
+        android:layout_margin="20dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    
+    
 
 </android.support.constraint.ConstraintLayout>
